--- a/config.yaml
+++ b/config.yaml
@@ -1,20 +1,9 @@
 default:
   push_kubernetes: false
-  push_images: true
+  push_images: false
 
 kubernetes:
   version: v1.23.6
 
 images:
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/controller:v0.34.0
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/kubeconfigwriter:v0.34.0@
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.34.0
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/entrypoint:v0.34.0
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/nop:v0.34.0
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/imagedigestexporter:v0.34.0
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/pullrequest-init:v0.34.0
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/workingdirinit:v0.34.0
-  - gcr.io/google.com/cloudsdktool/cloud-sdk
-  - gcr.io/distroless/bas
-  - mcr.microsoft.com/powershell:nanoserver
-  - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/webhook:v0.34.0
+  - docker.io/nginx:latest
