--- a/config.yaml
+++ b/config.yaml
@@ -6,4 +6,6 @@ kubernetes:
   version: v1.23.1
 
 images:
-  - docker.io/nginx:latest
+  - gcr.io/distroless/base
+  - gcr.io/google.com/cloudsdktool/cloud-sdk
+  - mcr.microsoft.com/powershell:nanoserve
