--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,13 @@
 default:
   push_kubernetes: false
-  push_images: false
+  push_images: true
 
 kubernetes:
   version: v1.23.1
 
 images:
-  - docker.io/nginx:latest
+  - gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/interceptors:v0.22.0
+  - gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/controller:v0.22.0
+  - gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/eventlistenersink:v0.22.0
+  - gcr.io/tekton-releases/github.com/tektoncd/triggers/cmd/webhook:v0.22.0
+
