--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 default:
   push_kubernetes: false
-  push_images: false
+  push_images: true
 
 kubernetes:
   version: v1.23.1
 
 images:
-  - docker.io/nginx:latest
+  - gcr.io/tekton-releases/github.com/tektoncd/dashboard/cmd/dashboard:v0.27.0
