--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 default:
   push_kubernetes: false
-  push_images: false
+  push_images: true
 
 kubernetes:
   version: v1.23.1
 
 images:
-  - docker.io/nginx:latest
+  - k8s.gcr.io/defaultbackend-amd64:1.5
